$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2011-01-18 [A] Added Norwegian language file (user contribution) {eenemeenemuu}
2011-01-15 [C] Fixed version number displayed on the index page in the doc {Frantz}
2011-01-11 [B] Fixed username in activation mail (thread ID 69555) {eenemeenemuu}
2011-01-02 [M] Release of cpg1.5.12 {eenemeenemuu}
2011-01-02 [S] Fixed XSS issues (thread ID 69327) {eenemeenemuu}
2011-01-02 [B] Fixed playback of Windows Media Player videos (thread ID 68537) {eenemeenemuu}
2011-01-02 [B] Fixed PHP session name for captcha (thread ID 69293) {eenemeenemuu}
2010-12-30 [C] Fixed colspan for guest comments when captcha is enabled (thread ID 69330) {eenemeenemuu}
2010-12-15 [B] Fixed memberlist issue when database name contains a dash (thread ID 68843) {eenemeenemuu}
2010-12-14 [B] Fixed custom thumbnail for files with uppercase extension (thread ID 68809) {eenemeenemuu}
2010-12-12 [O] Updated Portuguese language file (user contribution) {eenemeenemuu}
2010-12-12 [B] Fixed function 'utf_replace' (thread ID 68753) {eenemeenemuu}
2010-12-12 [C] Fixed indent for subcategories (thread ID 68764) {eenemeenemuu}
2010-12-09 [B] Fixed film strip issue (thread ID 68585) {eenemeenemuu}
2010-11-30 [M] Counted version count up in SVN repository from cpg1.5.10 to cpg1.5.11 {eenemeenemuu}
2010-11-30 [M] Release of cpg1.5.10 {eenemeenemuu}
2010-11-30 [B] Fixed issue with language manager (thread ID 68309) {eenemeenemuu}
2010-11-27 [S] Fixed potential security issue during installation (thread ID 68285) {eenemeenemuu}
2010-11-25 [A] Added missing/new plugin hooks to visiblehookpoints plugin {eenemeenemuu}