@@ -23,6 +23,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2011-01-20 [B] Fixed album thumbnail for keyword albums without physical files when link_pic_count is disabled (thread ID 69449) {eenemeenemuu}
 2011-01-18 [A] Added Norwegian language file (user contribution) {eenemeenemuu}
 2011-01-15 [C] Fixed version number displayed on the index page in the doc {Frantz}
 2011-01-11 [B] Fixed username in activation mail (thread ID 69555) {eenemeenemuu}
